--- a/info.html
+++ b/info.html
@@ -85,7 +85,6 @@
                 padding-left: 8px;
                 padding-right: 8px;
                 font-family: Editorial New;
-                font-size: 20px;
             }
 
             .header-back {
@@ -111,9 +110,9 @@
             <h1><a href="index.html">&#8592;</a></h1>
             <h1>Information about 2024 MFA Thesis Exhibition</h1>
         </div>
-        <h3>The 2024 MFA Thesis Exhibition features 33 outstanding emerging artists and designers. Representing eight
+        <h2 style="font-size: 20px;">The 2024 MFA Thesis Exhibition features 33 outstanding emerging artists and designers. Representing eight
             departments, these students’ ambitious and challenging research pushes beyond traditional disciplines to
-            shape what is new and next in visual and material culture. </h3>
+            shape what is new and next in visual and material culture. </h2>
         <h2>The MFA Thesis Exhibition is held at The Anderson (907 ½W Franklin St, Richmond) and takes place in two
             rounds: </h2>
         <h2>Round 1: April 5–April 19, Opening Reception: April 5, 5–8 p.m. 
