--- a/info.html
+++ b/info.html
@@ -85,6 +85,7 @@
                 padding-left: 8px;
                 padding-right: 8px;
                 font-family: Editorial New;
+                gap:10%;
             }
 
             .header-back {
@@ -115,7 +116,7 @@
             shape what is new and next in visual and material culture. </h2>
         <h2 style="font-size: 20px;">The MFA Thesis Exhibition is held at The Anderson (907 ½W Franklin St, Richmond) and takes place in two
             rounds: </h2>
-        <h2>Round 1: April 5–April 19, Opening Reception: April 5, 5–8 p.m. 
+        <h2 style="font-size: 16px;">Round 1: April 5–April 19, Opening Reception: April 5, 5–8 p.m. 
             <br>Round 2: April 26–May 11, Opening Reception: April 26, 5–8 p.m.
         </h2>
 
