--- a/info.html
+++ b/info.html
@@ -14,7 +14,7 @@
         }
 
         * {
-            overflow: hidden;
+            overflow: auto;
             cursor: none;
         }
 
@@ -111,12 +111,12 @@
             <h1><a href="index.html">&#8592;</a></h1>
             <h1>Information about 2024 MFA Thesis Exhibition</h1>
         </div>
-        <h2 style="font-size: 20px;">The 2024 MFA Thesis Exhibition features 33 outstanding emerging artists and designers. Representing eight
+        <h2 style="font-size: 16px;">The 2024 MFA Thesis Exhibition features 33 outstanding emerging artists and designers. Representing eight
             departments, these students’ ambitious and challenging research pushes beyond traditional disciplines to
             shape what is new and next in visual and material culture. </h2>
-        <h2 style="font-size: 20px;">The MFA Thesis Exhibition is held at The Anderson (907 ½W Franklin St, Richmond) and takes place in two
+        <h2>The MFA Thesis Exhibition is held at The Anderson (907 ½W Franklin St, Richmond) and takes place in two
             rounds: </h2>
-        <h2 style="font-size: 16px;">Round 1: April 5–April 19, Opening Reception: April 5, 5–8 p.m. 
+        <h2>Round 1: April 5–April 19, Opening Reception: April 5, 5–8 p.m. 
             <br>Round 2: April 26–May 11, Opening Reception: April 26, 5–8 p.m.
         </h2>
 
