--- a/index.html
+++ b/index.html
@@ -170,37 +170,37 @@
             <h1>Round 1 // April 5 - 19</h1>
 
             <div class="people-list">
-                <a href="https://barleyxcx.github.io">
+                <a href="https://barleyxcx.github.io" target="_blank" rel="noopener noreferrer">
                     <h1>Bradley Sinanan</h1>
                 </a>
-                <a href="https://chelsearowedesign.com/">
+                <a href="https://chelsearowedesign.com/" target="_blank" rel="noopener noreferrer">
                     <h1>Chelsea Nanfelt Rowe</h1>
                 </a>
-                <a href="https://www.chrystinerayburn.com/">
+                <a href="https://www.chrystinerayburn.com/" target="_blank" rel="noopener noreferrer">
                     <h1>Chrystine Rayburn</h1>
                 </a>
-                <a href="https://www.instagram.com/giancarlo.a.venturini/">
+                <a href="https://www.instagram.com/giancarlo.a.venturini/" target="_blank" rel="noopener noreferrer">
                     <h1>Giancarlo Venturini</h1>
                 </a>
-                <a href="https://www.instagram.com/giladleiba/?hl=en">
+                <a href="https://www.instagram.com/giladleiba/?hl=en" target="_blank" rel="noopener noreferrer">
                     <h1>Gilad Leiba</h1>
                 </a>
-                <a href="https://www.instagram.com/grace__bromley/">
+                <a href="https://www.instagram.com/grace__bromley/" target="_blank" rel="noopener noreferrer">
                     <h1>Grace Bromley</h1>
                 </a>
-                <a href="https://www.jermaineollivierre.com/">
+                <a href="https://www.jermaineollivierre.com/" target="_blank" rel="noopener noreferrer">
                     <h1>Jermaine Ollivierre</h1>
                 </a>
-                <a href="https://leileixia.com/#home">
+                <a href="https://leileixia.com/#home" target="_blank" rel="noopener noreferrer">
                     <h1>Leilei Xia</h1>
                 </a>
-                <a href="https://www.taehee.xyz/" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.taehee.xyz/" target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer">
                     <h1>taehee</h1>
                 </a>
-                <a href="https://instagram.com/_yifei_k">
+                <a href="https://instagram.com/_yifei_k" target="_blank" rel="noopener noreferrer">
                     <h1>Yifei Kong</h1>
                 </a>
-                <a href="https://yuanxin.art/">
+                <a href="https://yuanxin.art/" target="_blank" rel="noopener noreferrer">
                     <h1>Yuan Xin</h1>
                 </a>
             </div>
@@ -208,43 +208,43 @@
         <div class="round2">
             <h1>Round 2 // April 26 - May 11</h1>
             <div class="people-list">
-                <a href="https://www.instagram.com/alexis.e.mabry/?hl=en">
+                <a href="https://www.instagram.com/alexis.e.mabry/?hl=en" target="_blank" rel="noopener noreferrer">
                     <h1>Alexis Mabry</h1>
                 </a>
-                <a href="https://www.instagram.com/arghavan.heydareslam">
+                <a href="https://www.instagram.com/arghavan.heydareslam" target="_blank" rel="noopener noreferrer">
                     <h1>Arghavan Heydareslam</h1>
                 </a>
-                <a href="https://www.instagram.com/holy_motors_holy">
+                <a href="https://www.instagram.com/holy_motors_holy" target="_blank" rel="noopener noreferrer">
                     <h1>Chunghee Yun</h1>
                 </a>
-                <a href="https://www.instagram.com/jalentadams/">
+                <a href="https://www.instagram.com/jalentadams/" target="_blank" rel="noopener noreferrer">
                     <h1>Jalen Adams</h1>
                 </a>
-                <a href="https://www.instagram.com/jessehoyleartist/">
+                <a href="https://www.instagram.com/jessehoyleartist/" target="_blank" rel="noopener noreferrer">
                     <h1>Jesse Hoyle</h1>
                 </a>
-                <a href="https://www.instagram.com/jessicatifase/?hl=de">
+                <a href="https://www.instagram.com/jessicatifase/?hl=de" target="_blank" rel="noopener noreferrer">
                     <h1>Jessica Tifase</h1>
                 </a>
-                <a href="https://www.instagram.com/chu.cumber">
+                <a href="https://www.instagram.com/chu.cumber" target="_blank" rel="noopener noreferrer">
                     <h1>Kai Chuang</h1>
                 </a>
-                <a href="https://www.instagram.com/kc.costumedesign">
+                <a href="https://www.instagram.com/kc.costumedesign" target="_blank" rel="noopener noreferrer">
                     <h1>Kasey Brown</h1>
                 </a>
-                <a href="https://www.instagram.com/paz.sher">
+                <a href="https://www.instagram.com/paz.sher" target="_blank" rel="noopener noreferrer">
                     <h1>Paz Sher</h1>
                 </a>
-                <a href="https://www.instagram.com/piabakala">
+                <a href="https://www.instagram.com/piabakala" target="_blank" rel="noopener noreferrer">
                     <h1>Pia Bakala</h1>
                 </a>
-                <a href="https://www.instagram.com/peachygrenade">
+                <a href="https://www.instagram.com/peachygrenade" target="_blank" rel="noopener noreferrer">
                     <h1>Rabeeha Adnan</h1>
                 </a>
-                <a href="https://www.instagram.com/shannon_kurzyniec_art">
+                <a href="https://www.instagram.com/shannon_kurzyniec_art" target="_blank" rel="noopener noreferrer">
                     <h1>Shannon Kurzyniec</h1>
                 </a>
-                <a href="https://www.instagram.com/imnotstephanie">
+                <a href="https://www.instagram.com/imnotstephanie" target="_blank" rel="noopener noreferrer">
                     <h1>Stephanie Germosen Salazar</h1>
                 </a>
             </div>
